kustomize-apps/gateway/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: public-store-route
  namespace: store
spec:
  parentRefs:
  - name: external-http

  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /west
    backendRefs:
    - group: net.gke.io
      kind: ServiceImport
      name: store-west-2
      port: 8080

  - matches:
    - path:
        type: PathPrefix
        value: /east
    backendRefs:
    - group: net.gke.io
      kind: ServiceImport
      name: store-east-1
      port: 8080

  - backendRefs:
    - group: net.gke.io
      kind: ServiceImport
      name: store
      port: 8080
